# opcua-test

./: .gitignore  Cargo.toml  log4rs.yaml
src/consumer/: main.rs
src/producer/: main.rs
